feat: ensure that toolbar has photos and favorites buttons

--- a/libs/shared/ui-common/src/lib/components/header/header.component.html
+++ b/libs/shared/ui-common/src/lib/components/header/header.component.html
@@ -1,1 +1,6 @@
-<p>header works!</p>
+<mat-toolbar color="primary">
+  <div class="header-buttons">
+    <button mat-flat-button>Photos</button>
+    <button mat-flat-button>Favorites</button>
+  </div>
+</mat-toolbar>
