feat: ensure that the button is hightlited according to current url

--- a/libs/shared/ui-common/src/lib/components/header/header.component.html
+++ b/libs/shared/ui-common/src/lib/components/header/header.component.html
@@ -1,6 +1,13 @@
 <mat-toolbar color="primary">
   <div class="header-buttons">
-    <button mat-flat-button>Photos</button>
-    <button mat-flat-button>Favorites</button>
+    <button mat-flat-button [color]="currentUrl === '/photos' ? 'accent' : ''">
+      Photos
+    </button>
+    <button
+      mat-flat-button
+      [color]="currentUrl === '/favorites' ? 'accent' : ''"
+    >
+      Favorites
+    </button>
   </div>
 </mat-toolbar>
