feat: ensure that the buttons redirects to correct url

--- a/libs/shared/ui-common/src/lib/components/header/header.component.html
+++ b/libs/shared/ui-common/src/lib/components/header/header.component.html
@@ -1,11 +1,16 @@
 <mat-toolbar color="primary">
   <div class="header-buttons">
-    <button mat-flat-button [color]="currentUrl === '/photos' ? 'accent' : ''">
+    <button
+      mat-flat-button
+      [color]="currentUrl === '/photos' ? 'accent' : ''"
+      routerLink="/photos"
+    >
       Photos
     </button>
     <button
       mat-flat-button
       [color]="currentUrl === '/favorites' ? 'accent' : ''"
+      routerLink="/favorites"
     >
       Favorites
     </button>
