--- a/libs/shared/ui-common/src/lib/components/header/header.component.html
+++ b/libs/shared/ui-common/src/lib/components/header/header.component.html
@@ -2,8 +2,8 @@
   <div class="header-buttons">
     <button
       mat-flat-button
-      [color]="currentUrl === '/photos' ? 'accent' : ''"
-      routerLink="/photos"
+      [color]="currentUrl === '/' ? 'accent' : ''"
+      routerLink="/"
     >
       Photos
     </button>
