feat: add and update imports of photo entity

--- a/libs/photos/feature-photos/src/lib/screens/photos/photos.component.html
+++ b/libs/photos/feature-photos/src/lib/screens/photos/photos.component.html
@@ -3,7 +3,7 @@
 <table class="table">
   <tr *ngFor="let photos of photosList$ | async">
     <td>{{ photos.id }}</td>
-    <td>{{ photos.name }}</td>
-    <td>{{ photos.description }}</td>
+    <td>{{ photos.author }}</td>
+    <td>{{ photos.download_url }}</td>
   </tr>
 </table>
