--- a/libs/photos/feature-photos/src/lib/components/photo-card/photo-card.component.html
+++ b/libs/photos/feature-photos/src/lib/components/photo-card/photo-card.component.html
@@ -1,7 +1,3 @@
-<mat-card>
-  <img
-    mat-card-image
-    src="https://material.angular.io/assets/img/examples/shiba2.jpg"
-    alt="Photo of a Shiba Inu"
-  />
+<mat-card class="card">
+  <img mat-card-image [src]="photo?.lite_download_url" [alt]="photo?.author" />
 </mat-card>
