feat: render photo-card list on grid component

--- a/libs/photos/feature-photos/src/lib/components/photo-grid/photo-grid.component.html
+++ b/libs/photos/feature-photos/src/lib/components/photo-grid/photo-grid.component.html
@@ -1,1 +1,6 @@
-<p>photo-grid works!</p>
+<div class="grid">
+  <photos-photo-card
+    *ngFor="let photo of photos; trackBy: trackById"
+    [photo]="photo"
+  ></photos-photo-card>
+</div>
