feat: ensure that the event will be emitted correctly

--- a/libs/photos/feature-photos/src/lib/screens/photos/photos.component.html
+++ b/libs/photos/feature-photos/src/lib/screens/photos/photos.component.html
@@ -1,3 +1,5 @@
-<ng-container *ngIf="photosList$ | async as photos">
-  <photos-photo-grid [photos]="photos"></photos-photo-grid>
-</ng-container>
+<ui-scroll-tracker (scrolled)="onScroll()">
+  <ng-container *ngIf="photosList$ | async as photos">
+    <photos-photo-grid [photos]="photos"></photos-photo-grid>
+  </ng-container>
+</ui-scroll-tracker>
