--- a/libs/photos/feature-photos/src/lib/components/photo-grid/photo-grid.component.scss
+++ b/libs/photos/feature-photos/src/lib/components/photo-grid/photo-grid.component.scss
@@ -4,6 +4,7 @@
   gap: 20px;
   justify-content: space-evenly;
   padding-top: 20px;
+  padding-bottom: 20px;
 
   @media only screen and (min-width: 600px) {
     grid-template-columns: repeat(2, 300px);
