feat: loading and load more implementation

--- a/libs/photos/feature-photos/src/lib/screens/photos/photos.component.html
+++ b/libs/photos/feature-photos/src/lib/screens/photos/photos.component.html
@@ -3,3 +3,4 @@
     <photos-photo-grid [photos]="photos"></photos-photo-grid>
   </ng-container>
 </ui-scroll-tracker>
+<common-spinner *ngIf="(loaded$ | async) === false"></common-spinner>
