--- a/libs/photos/feature-photos/src/lib/components/photo-card/photo-card.component.html
+++ b/libs/photos/feature-photos/src/lib/components/photo-card/photo-card.component.html
@@ -1,3 +1,3 @@
-<mat-card class="card">
+<mat-card class="card" (click)="emitClickEvent()">
   <img mat-card-image [src]="photo?.lite_download_url" [alt]="photo?.author" />
 </mat-card>
