feat: ensure that the event is emitted correctly

--- a/libs/photos/feature-photos/src/lib/components/photo-grid/photo-grid.component.html
+++ b/libs/photos/feature-photos/src/lib/components/photo-grid/photo-grid.component.html
@@ -2,5 +2,6 @@
   <photos-photo-card
     *ngFor="let photo of photos; trackBy: trackById"
     [photo]="photo"
+    (clickEventEmitter)="cardClicked($event)"
   ></photos-photo-card>
 </div>
