feat: show favorites photos on favorites screen

--- a/libs/photos/feature-photos/src/lib/screens/favorites/favorites.component.html
+++ b/libs/photos/feature-photos/src/lib/screens/favorites/favorites.component.html
@@ -1,1 +1,3 @@
-<p>favorites works!</p>
+<ng-container *ngIf="favorites$ | async as photos">
+  <photos-photo-grid [photos]="photos"></photos-photo-grid>
+</ng-container>
