feat: ensure redirection to photo details

--- a/libs/photos/feature-photos/src/lib/screens/favorites/favorites.component.html
+++ b/libs/photos/feature-photos/src/lib/screens/favorites/favorites.component.html
@@ -1,3 +1,6 @@
 <ng-container *ngIf="favorites$ | async as photos">
-  <photos-photo-grid [photos]="photos"></photos-photo-grid>
+  <photos-photo-grid
+    [photos]="photos"
+    (clickEventEmitter)="openPhotoDetails($event)"
+  ></photos-photo-grid>
 </ng-container>
