--- a/libs/photos/feature-photos/src/lib/components/photo-grid/photo-grid.component.scss
+++ b/libs/photos/feature-photos/src/lib/components/photo-grid/photo-grid.component.scss
@@ -1,20 +1,21 @@
 .grid {
   display: grid;
-  grid-template-columns: repeat(1, 300px);
+  grid-template-columns: repeat(1, 330px);
   gap: 20px;
   justify-content: space-evenly;
+  justify-items: center;
   padding-top: 20px;
   padding-bottom: 20px;
 
-  @media only screen and (min-width: 600px) {
-    grid-template-columns: repeat(2, 300px);
+  @media only screen and (min-width: 660px) {
+    grid-template-columns: repeat(2, 330px);
   }
 
   @media only screen and (min-width: 992px) {
-    grid-template-columns: repeat(3, 300px);
+    grid-template-columns: repeat(3, 330px);
   }
 
-  @media only screen and (min-width: 1200px) {
-    grid-template-columns: repeat(4, 250px);
+  @media only screen and (min-width: 1380px) {
+    grid-template-columns: repeat(4, 330px);
   }
 }
