feat: photo-detail component

--- a/libs/photos/feature-photos/src/lib/screens/photo-detail/photo-detail.component.html
+++ b/libs/photos/feature-photos/src/lib/screens/photo-detail/photo-detail.component.html
@@ -1,1 +1,7 @@
-<p>photo-detail works!</p>
+<div class="container">
+  <photos-photo-card
+    [photo]="photo"
+    [useFullResolution]="true"
+  ></photos-photo-card>
+  <button mat-flat-button color="primary">Remove from favorites</button>
+</div>
