feat: ensure that second button is highlited after a refresh on details page

--- a/libs/shared/ui-common/src/lib/components/header/header.component.html
+++ b/libs/shared/ui-common/src/lib/components/header/header.component.html
@@ -9,7 +9,11 @@
     </button>
     <button
       mat-flat-button
-      [color]="currentUrl === '/favorites' ? 'accent' : ''"
+      [color]="
+        currentUrl === '/favorites' || currentUrl.includes('/photo')
+          ? 'accent'
+          : ''
+      "
       routerLink="/favorites"
     >
       Favorites
