--- a/libs/shared/ui-common/src/lib/layouts/main-layout/main-layout.component.scss
+++ b/libs/shared/ui-common/src/lib/layouts/main-layout/main-layout.component.scss
@@ -1,5 +1,3 @@
 .wrapper {
-  height: 100vh;
-
-  background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
+  background-color: #f0f8ff;
 }
