--- a/libs/photos/feature-photos/src/lib/components/photo-card/photo-card.component.scss
+++ b/libs/photos/feature-photos/src/lib/components/photo-card/photo-card.component.scss
@@ -1,3 +1,18 @@
+@use '@angular/material' as mat;
+
 :host {
   width: 90%;
+}
+
+.clickable {
+  cursor: pointer;
+  transition: transform 0.2s;
+
+  &:hover {
+    @include mat.elevation(6);
+    transform: scale(1.05);
+  }
+  &:active {
+    transform: translateY(6px);
+  }
 }
