--- a/libs/photos/feature-photos/src/lib/screens/photo-detail/photo-detail.component.html
+++ b/libs/photos/feature-photos/src/lib/screens/photo-detail/photo-detail.component.html
@@ -2,6 +2,7 @@
   <photos-photo-card
     [photo]="photo"
     [useFullResolution]="true"
+    [clickable]="false"
   ></photos-photo-card>
   <button mat-flat-button color="primary" (click)="removeFavorite()">
     Remove from favorites
