test: scrolling behavior e2e test

--- a/libs/photos/feature-photos/src/lib/components/photo-card/photo-card.component.html
+++ b/libs/photos/feature-photos/src/lib/components/photo-card/photo-card.component.html
@@ -1,4 +1,8 @@
-<mat-card (click)="emitClickEvent()" [ngClass]="clickable ? 'clickable' : ''">
+<mat-card
+  (click)="emitClickEvent()"
+  [ngClass]="clickable ? 'clickable' : ''"
+  data-cy="photo-card"
+>
   <img
     mat-card-image
     [src]="useFullResolution ? photo?.download_url : photo?.lite_download_url"
