--- a/libs/shared/ui-common/src/lib/components/header/header.component.html
+++ b/libs/shared/ui-common/src/lib/components/header/header.component.html
@@ -4,6 +4,7 @@
       mat-flat-button
       [color]="currentUrl === '/' ? 'accent' : ''"
       routerLink="/"
+      data-cy="header-photos-button"
     >
       Photos
     </button>
@@ -15,6 +16,7 @@
           : ''
       "
       routerLink="/favorites"
+      data-cy="header-favorites-button"
     >
       Favorites
     </button>
